[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "epm"
authors = [
    { name = "David P. Chassin", email = "dchassin@eudoxys.com" }
]
description = "Eudoxys package manager"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["eudoxys","package","manager"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[tool.setuptools]
packages = [
    "epm"
]

[project.scripts]
epm = "epm:main"

